	
	* Added configuration variables
	supybot.plugins.Services.NickServ.password (which replaces the
	old supybot.plugins.Services.password) for specifying the
	NickServ password, as well as
	supybot.plugins.Services.ChanServ.{op,halfop,voice}, which
	determine what the bot should request of ChanServ when it
	identifies or joins a channel.  These latter variables are, of
	course, channel variables.
	
	* Fixed bug #863601, plugin BadWords fails on color codes.

	* Replaced Sourceforge.{rfe,bug} with Sourceforge.tracker, which
	can query any tracker type (not just RFEs and bugs) and responds
	with more information, a la trackerSnarfer.

	* Added supybot.log.individualPluginLogfiles, which determines
	whether plugin logs will be logged to their individual logfiles
	in addition to the misc.log logfile.
	
	* Added supybot.plugins.WordStats.ignoreQueries, which, when
	true, makes the bot ignore queries (and not increment its word
	statistics).
	
	* Added the LogToIrc plugin, for sending logs to an IRC
	channel or nick.  Useful for traceback notification and whatnot.
	
	* Changed supybot.log.timestampFormat to specially handle the
	empty string -- if it's set to the empty string, it will log
	times in seconds-since-epoch format.
	
	* Added supybot.plugins.Weather.convert, which determines whether
	or not Weather.{weather,cnn,ham} will convert temperature to the
	configured temperatureUnit.

	* Changed User.setpassword not to require the <old password> to
	be correct if the requesting user has the owner capability (and
	isn't the owner himself).
	
	* Added ircutils.strip{Bold,Reverse,Underline,Formatting}, which
	will remove the specified formatting or all forms of formatting
	in the case of stripFormatting.

	
2004-04-09  Jeremy Fincher  <jemfinch@supybot.org>
	
	* Version 0.77.1!
	
	* Added supybot.reply.errorWithNotice to make the bot give its
	error messages in a notice.
	
	* Added Filter.colorstrip, an outfilter that strips all color
	codes from messages.
